Use Integer.valueOf instead of Integer::new
(Integer::new is deprecated and marked for removal)